# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20231206032630_create_subscriptions_table.sql  20240122023523_add_status_to_subscriptions.sql  20240122024613_make_status_not_null_in_subscriptions.sql  20240122031123_create_subscription_tokens_table.sql  20240131032547_create_users_table.sql  20240131055015_add_salt_to_users.sql  20240226062604_create_idempotency_table.sql  20240228043224_create_newsletter_issues_table.sql  20240228044122_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
tests/: configuration.rs  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
